--- a/Single Price Grid/index.html
+++ b/Single Price Grid/index.html
@@ -10,7 +10,7 @@
     <title>Join</title>
 </head>
 <body>
-    <main>
+    <main id="main-content">
         <section class="grid-container">
             <article class="article-join">
                 <h1>Join our community</h1>
