--- a/Clipboard Landing Page/index.html
+++ b/Clipboard Landing Page/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/reset.cs">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Clipboard </title>
 </head>
 <body>
@@ -14,8 +15,8 @@
     <p>Clipboard allows you to track and organize everything you 
       copy. Instantly access your clipboard on all your devices.</p>
       <div class="btns">
-      <button class="download-ios">Download for iOS</button>
-      <button class="download-mac">Download for Mac</button>
+      <button class="btn-download ios">Download for iOS</button>
+      <button class="btn-download mac">Download for Mac</button>
     </div>
   </header>
   <main id="main-content">
@@ -26,10 +27,10 @@
       meaning you can access your snippets immediately on all your 
       devices. Our Mac and iOS apps will help you organize everything.</p>
     </article>
-    <div class="img-computer">
-      <img src="images/image-computer.png" alt="computer">
-    </div>
     <article class="benefits-top">
+      <div class="computer">
+        <img src="images/image-computer.png" class="img-computer" alt="computer">
+      </div>
       <h3>Quick Search</h3>
       <p>Easily search your snippets by content, category, web address, application, and more.</p>
       <h3>iCloud Sync</h3>
@@ -43,21 +44,21 @@
       <h2> Access Clipboard anywhere</h2>
       <p>Whether you’re on the go, or at your computer, you can access all your Clipboard
         snippets in a few simple clicks.</p>
-        <div class="img-devices">
-          <img src="images/image-devices.png" alt="devices">
+        <div class="devices">
+          <img src="images/image-devices.png" class="img-devices" alt="devices">
         </div>
     </article>
     <article class="features">
       <h2>Supercharge your workflow</h2>
       <p>We’ve got the tools to boost your productivity.</p>
-      <div class="features-itens">
-        <img src="images/icon-blacklist.svg" alt="blacklists icon">
+      <div class="feature-itens">
+        <img src="images/icon-blacklist.svg" class="icon-features" alt="blacklists icon">
         <h3>Create blacklists</h3>
         <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
-        <img src="images/icon-text.svg" alt="text icon">
+        <img src="images/icon-text.svg" class="icon-features" alt="text icon">
         <h3>Plain text snippets</h3>
         <p>Remove unwanted formatting from copied text for a consistent look.</p>
-        <img src="images/icon-preview.svg" alt="preview icon">
+        <img src="images/icon-preview.svg" class="icon-features" alt="preview icon">
         <h3>Sneak preview</h3>
         <p>Quick preview of all snippets on your Clipboard for easy access.</p>
       </div>
@@ -75,13 +76,13 @@
       <p>Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
         and you’re ready to start adding to your clipboard.</p>
         <div class="btns">
-          <button class="download-ios">Download for iOS</button>
-          <button class="download-mac">Download for Mac</button>
+          <button class="btn-download ios">Download for iOS</button>
+          <button class="btn-download mac">Download for Mac</button>
         </div>
     </section>
   </main>
   <footer>
-    <img src="images/logo.svg" alt="clipboard logo">
+    <img src="images/logo.svg" class="logo-bottom" alt="clipboard logo">
     <section class="links-footer">
       <a href="#">FAQs</a>
       <a href="#">Contact Us</a>
@@ -90,15 +91,9 @@
       <a href="#">Install Guide</a>
     </section>
     <section class="social-networks">
-      <a href="#"><img src="images/icon-facebook.svg" alt="facebook icon with redirect to social network"></a>
-      <a href="#"><img src="images/icon-twitter.svg" alt="twitter icon with redirect to social network"></a>
-      <a href="#"><img src="images/icon-instagram.svg" alt="instagram icon with redirect to social network"></a>
+      <a href="#"><img src="images/icon-facebook.svg" class="icon-social" alt="facebook icon with redirect to social network"></a>
+      <a href="#"><img src="images/icon-twitter.svg" class="icon-social" alt="twitter icon with redirect to social network"></a>
+      <a href="#"><img src="images/icon-instagram.svg" class="icon-social" alt="instagram icon with redirect to social network"></a>
     </section>
   </footer>
-  
-  
-  
-  
-  
-</body>
 </html>
